package com.adulting101.ManchApp.repositories;


import com.adulting101.ManchApp.models.*;
import org.springframework.data.jpa.repository.JpaRepository;

public interface PrecaucionesRepository extends JpaRepository<Precauciones,Long>{

}
