package com.adulting101.ManchApp.repositories;


import com.adulting101.ManchApp.models.Precauciones;
import com.adulting101.ManchApp.models.SolucionFavorita;
import org.springframework.data.jpa.repository.JpaRepository;

public interface SolucionFavoritaRepository extends JpaRepository<SolucionFavorita,Long>{

}
